# stroma

./: .beads  .dockerignore  .events.jsonl  .feed.jsonl  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CRYPTO_COVERAGE_AUDIT.md  Cargo.toml  Dockerfile  FREENET_IMPLEMENTATION.md  MATCHMAKER_COVERAGE_REPORT.md  PHASE0_REVIEW_REPORT.md  PHASE2_REVIEW.md  README.md  analysis-report.md  deny.toml  migration-log.md  migration-plan.md  phase1-review-report.md  proptest.toml
.beads/: architectural-decisions-open.bead  architecture-decisions.bead  architecture-objectives.bead  blind-matchmaker-dvr.bead  bootstrap-seed.bead  bot-deployment-model.bead  cluster-terminology.bead  config.yaml  contract-encryption.bead  convergence-insight.bead  core-standards.bead  cross-cluster-requirement.bead  cryptography-zk.bead  dev-environment.bead  discovery-protocols.bead  documentation-workflow.bead  extensible-contracts.bead  federation-roadmap.bead  freenet-contract-design.bead  freenet-integration.bead  gastown-workflow.bead  git-standards.bead  governance-model.bead  group-identity.bead  issues.jsonl  mesh-health-metric.bead  operator-cli.bead  persistence-model.bead  philosophical-foundations.bead  poll-implementation-gastown.bead  proposal-system.bead  routes.jsonl  rust-async.bead  rust-standards.bead  security-constraints.bead  signal-integration.bead  technology-stack.bead  terminology.bead  testing-standards.bead  user-roles-ux.bead  (+2 more)
.beads/export-state/: e6c8d17d2b9492c3.json
.beads/formulas/: mol-boot-triage.formula.toml  mol-refinery-patrol.formula.toml  stroma-convoy-phase.formula.toml  stroma-polecat-rust.formula.toml  stroma-proptest-trust.formula.toml  stroma-refinery-validate.formula.toml  stroma-security-witness.formula.toml
.config/: nextest.toml
.cursor/plans/: comprehensive_security_ci_cd_workflow_6cac5208.plan.md  gastown_workspace_setup_83dd829f.plan.md
.cursor/rules/: CHANGELOG-UX-CLARIFICATIONS.md  architecture-objectives.mdc  bootstrap-seed.mdc  ci-cd-protection.mdc  cluster-terminology.mdc  convergence.mdc  core-standards.mdc  cryptography-zk.mdc  dev-environment.mdc  documentation-workflow.mdc  freenet-contract-design.mdc  freenet-integration.mdc  gastown-workflow.mdc  git-standards.mdc  graph-analysis.mdc  mdc-standards.mdc  operator-cli.mdc  philosophical-foundations.mdc  rust-async.mdc  rust-standards.mdc  security-guardrails.mdc  signal-integration.mdc  tech-stack.mdc  terminology.mdc  testing-standards.mdc  user-roles-ux.mdc  vetting-protocols.mdc
.github/: BRANCH-PROTECTION-SETUP.md  CACHING.md  CI-CD-PROTECTION.md
.github/codeql/: codeql-config.yml
.github/workflows/: cargo-deny.yml  ci-monitor.yml  ci.yml  pr-quality-gates.yml  release.yml  reusable-coverage.yml  security.yml
benches/: cluster_detection.rs  dvr.rs  graph_performance.rs  matchmaker.rs  mesh_commands.rs  phase2_performance.rs  stark_vouch.rs
daemon/: activity.json
deacon/: heartbeat.json
docs/: ALGORITHMS.md  BENCHMARKS.md  BRANCH-PROTECTION-SETUP.md  CI-CD-DEPLOYMENT-STATUS.md  CI-CD-PROTECTION.md  CODECOV-SETUP.md  CONTAINER-BUILD.md  DEVELOPER-GUIDE.md  EXTENSIBLE-CONTRACT-INTERFACES.md  FEDERATION.md  FREENET_IMPLEMENTATION.md  GASTOWN-SEPARATION-PLAN.md  GV2-WRITE-PROTOCOL.md  HOW-IT-WORKS.md  LAYER-2-IMPLEMENTATION.md  MUTUALAI-CONVERGENCE.md  OPERATOR-GUIDE.md  PERSISTENCE.md  PRE-GASTOWN-AUDIT.md  PRESAGE-BLOCKER-UPDATE.md  PRESAGE-SQLLITE.md  PRESAGE-STATUS.md  REFINERY-QUALITY-GATES.md  SECURITY-ANALYSIS-STORAGE.md  SECURITY-CI-CD.md  SESSION-SUMMARY-2026-01-26.md  SIGNAL-STORAGE-SECURITY.md  SPIKE-WEEK-BRIEFING.md  THREAT-MODEL-AUDIT.md  THREAT-MODEL-UPDATE-SUMMARY.md  THREAT-MODEL.md  TODO.md  TRUST-MODEL.md  TRUST-TOPOLOGY-PLATFORM.md  USER-GUIDE.md  VALIDATOR-THRESHOLD-STRATEGY.md  VOUCH-INVALIDATION-LOGIC.md  phase-2.5-review.md  phase2-security-audit.md
docs/spike/: SPIKE-WEEK-2-BRIEFING.md  SPIKE-WEEK-BRIEFING.md
docs/todo/: INFRASTRUCTURE-DOCUMENTATION-REVIEW.md  PHASE0_REVIEW_REPORT.md  PHASE2-BENCHMARKS.md  PHASE2_REVIEW.md  PRE-GASTOWN-AUDIT.md  TODO.md  admission-flow-gap-analysis.md  group_creation_for_presage_cf0a3f15.plan.md  phase-2.5-review.md  phase1-review-report.md  phase2-security-audit.md  privacy-first_admission_flow_90400c89.plan.md  step3-freenet-implementation.md  stromastore_wrapper_migration_661600eb.plan.md
docs/vision/: EXTENSIBLE-CONTRACT-INTERFACES.md  FEDERATION.md  MUTUALAI-CONVERGENCE.md  TRUST-TOPOLOGY-PLATFORM.md
mayor/: overseer.json  town.json
patches/bincode/: Cargo.toml
patches/libsqlite3-sys/: build.rs
patches/paste/: Cargo.toml  README.md
patches/rustls-pemfile/: Cargo.toml  README.md
scripts/: README.md  REFINERY-QUALITY-GATES.md  install-hooks.fish  install-hooks.sh  provision-signal-cli.fish  refinery-validate.sh  run-ci-locally.sh
scripts/hooks/: README.md  install.sh  pre-push
scripts/patrol/: README.md  ci-failures-sync.sh
src/: identity.rs  lib.rs  main.rs
src/cli/: README.md  TESTING.md  backup_store.rs  config.rs  link_device.rs  mod.rs  passphrase.rs  register.rs  run.rs  status.rs  unregister.rs  verify.rs  version.rs
src/crypto/: keyring.rs  mod.rs  psi_ca.rs
src/federation/: mod.rs  social_anchor.rs
src/freenet/: contract.rs  embedded_kernel.rs  mock.rs  mod.rs  state_stream.rs  traits.rs  trust_contract.rs
src/gatekeeper/: audit_trail.rs  ejection.rs  health_monitor.rs  mod.rs  rate_limiter.rs
src/matchmaker/: cluster_detection.rs  display.rs  dvr.rs  graph_analysis.rs  mod.rs  strategic_intro.rs
src/persistence/: attestation.rs  chunk_storage.rs  chunks.rs  distribution.rs  encryption.rs  health.rs  mod.rs  proptests.rs  recovery.rs  registry.rs  rendezvous.rs  write_blocking.rs
src/serialization/: mod.rs
src/signal/: bootstrap.rs  bot.rs  client.rs  group.rs  linking.rs  matchmaker.rs  member_resolver.rs  mock.rs  mod.rs  (+8 more)
stroma/: config.json
tests/: admission_zk_proof.rs  cli_integration.rs  e2e_cross_rig_validation.rs  persistence_recovery_test.rs  phase1_integration.rs  phase2_integration.rs  proposal_flow.rs
utils/: provision-signal-cli.fish
(+68 files in other folders)
