[package]
name = "stroma"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"  # Required for musl 1.2.5 with improved DNS resolver
license = "Apache-2.0"

[lib]
name = "stroma"
path = "src/lib.rs"

[[bin]]
name = "stroma"
path = "src/main.rs"

# Spike binaries (NOT part of test suite)
[[bin]]
name = "spike-q1"
path = "docs/spike/q1/main.rs"

[[bin]]
name = "spike-q2"
path = "docs/spike/q2/main.rs"

[[bin]]
name = "spike-q3"
path = "docs/spike/q3/main.rs"

[[bin]]
name = "spike-q5"
path = "docs/spike/q5/main.rs"

[[bin]]
name = "spike-q4"
path = "docs/spike/q4/main.rs"

[[bin]]
name = "spike-q7"
path = "docs/spike/q7/main.rs"

[[bin]]
name = "spike-q8"
path = "docs/spike/q8/main.rs"

[[bin]]
name = "spike-q9"
path = "docs/spike/q9/main.rs"

[[bin]]
name = "spike-q11"
path = "docs/spike/q11/main.rs"

[[bin]]
name = "spike-q12"
path = "docs/spike/q12/main.rs"

[[bin]]
name = "spike-q13"
path = "docs/spike/q13/main.rs"

[[bin]]
name = "spike-q14"
path = "docs/spike/q14/main.rs"

[dependencies]
# Freenet node (in-process embedding via SimNetwork for testing, or Node for production)
# - freenet: The node itself (SimNetwork for testing, NodeConfig for production)
# - freenet-stdlib: For writing Wasm contracts that run inside the node
# freenet = "0.1"  # FIXME: Temporarily disabled to test identity module, re-enable later
# freenet-stdlib = { version = "=0.1.30", features = ["contract", "net"] }  # FIXME: Temporarily disabled

# Signal integration (uses forked libsignal-service-rs with poll support)
# ❌ DO NOT USE: presage-store-sqlite (stores ALL messages - server seizure risk!)
# See: .beads/security-constraints.bead § 10, .cursor/rules/security-guardrails.mdc
# NOTE: Presage currently doesn't compile with our libsignal-service-rs fork
# We've implemented trait abstractions that will work once presage is updated
presage = { git = "https://github.com/whisperfish/presage", optional = true }

# Async runtime and serialization
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2.0"

# Cryptography
ring = { version = "0.17", features = ["std"] }
zeroize = { version = "1.8", features = ["derive"] }
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"

# ZK-proofs (STARK implementation)
winterfell = "0.9"
winter-math = "0.9"
winter-crypto = "0.9"

# Binary serialization (CBOR for Freenet, NOT JSON)
ciborium = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Property-based testing
proptest = "1.6"

[dev-dependencies]
rand = "0.8"
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "stark_vouch"
harness = false

# Protocol v8 poll support via our fork of libsignal-service-rs
# Branch based directly on b48b42fbc (commit presage pins to)
# See: .beads/poll-implementation-gastown.bead
[patch."https://github.com/whisperfish/libsignal-service-rs"]
libsignal-service = { git = "https://github.com/roder/libsignal-service-rs", branch = "feature/protocol-v8-polls-fixed" }

# Required per libsignal-service-rs README: patch curve25519-dalek to use Signal's fork
# This resolves the version conflict between crates.io and Signal's forked version
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

[profile.release]
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization
strip = true            # Remove symbols
opt-level = "z"         # Optimize for size
panic = "abort"         # Smaller binary
