[package]
name = "stroma"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"  # Required for musl 1.2.5 with improved DNS resolver
license = "AGPL-3.0-or-later"

[lib]
name = "stroma"
path = "src/lib.rs"

[[bin]]
name = "stroma"
path = "src/main.rs"

[dependencies]
# Freenet node (in-process embedding via SimNetwork for testing, or Node for production)
# - freenet: The node itself (SimNetwork for testing, NodeConfig for production)
# - freenet-stdlib: For writing Wasm contracts that run inside the node
freenet = "0.1"
freenet-stdlib = { version = "=0.1.30", features = ["contract", "net"] }

# Signal integration (uses forked libsignal-service-rs with poll support)
# ❌ DO NOT USE: presage-store-sqlite (stores ALL messages - server seizure risk!)
# See: .beads/security-constraints.bead § 10, .cursor/rules/security-guardrails.mdc
presage = { git = "https://github.com/roder/presage", branch = "feature/protocol-v8-polls-compatibility" }

# Async runtime and serialization
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2.0"

# Cryptography
ring = { version = "0.17", features = ["std"] }
zeroize = { version = "1.8", features = ["derive"] }
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"

# ZK-proofs (STARK implementation)
winterfell = "0.9"
winter-math = "0.9"
winter-crypto = "0.9"

# Binary serialization (CBOR for Freenet, NOT JSON)
ciborium = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Property-based testing
proptest = "1.6"

# Graph algorithms (for matchmaker)
petgraph = "0.6"

[dev-dependencies]
rand = "0.8"
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "stark_vouch"
harness = false

[[bench]]
name = "graph_performance"
harness = false

[[bench]]
name = "dvr"
harness = false

[[bench]]
name = "cluster_detection"
harness = false

[[bench]]
name = "matchmaker"
harness = false

[[bench]]
name = "mesh_commands"
harness = false

# Protocol v8 poll support via our fork of libsignal-service-rs
# Branch rebased on post-websocket-migration libsignal (commit 498c03d)
# See: .beads/poll-implementation-gastown.bead
[patch."https://github.com/whisperfish/libsignal-service-rs"]
libsignal-service = { git = "https://github.com/roder/libsignal-service-rs", branch = "feature/protocol-v8-polls-rebased" }

# Required per libsignal-service-rs README: patch curve25519-dalek to use Signal's fork
# This resolves the version conflict between crates.io and Signal's forked version
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

# Replace unmaintained paste crate with maintained pastey fork (RUSTSEC-2024-0436)
# Uses local wrapper crate that re-exports pastey as paste
paste = { path = "patches/paste" }

# Replace unmaintained rustls-pemfile with rustls-pki-types (RUSTSEC-2025-0134)
# Uses local wrapper crate that provides rustls-pemfile API on top of rustls-pki-types
rustls-pemfile = { path = "patches/rustls-pemfile" }

# Replace unmaintained bincode with maintained bincode2 fork (RUSTSEC-2025-0141)
# Uses local wrapper crate that provides bincode v1 API (including Options trait and Deserializer)
bincode = { path = "patches/bincode" }

[profile.release]
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization
strip = true            # Remove symbols
opt-level = "z"         # Optimize for size
panic = "abort"         # Smaller binary
